--- a/themes/meghna-hugo/layouts/partials/head.html
+++ b/themes/meghna-hugo/layouts/partials/head.html
@@ -30,5 +30,6 @@
     {{ range .Site.Params.custom_css }}
     <link rel="stylesheet" href="{{ . | absURL }}">
     {{ end }}
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
 </head>
