--- a/themes/meghna-hugo/layouts/index.html
+++ b/themes/meghna-hugo/layouts/index.html
@@ -1,5 +1,6 @@
 {{ define "main" }}
-
+    {{ template "_internal/google_analytics_async.html" . }}
+    
     {{ partial "header.html" . }}
         
     {{ partial "preloader.html" . }}
