--- a/themes/meghna-hugo/layouts/partials/contact.html
+++ b/themes/meghna-hugo/layouts/partials/contact.html
@@ -27,8 +27,10 @@
 
             {{"<!-- Contact Form -->" | safeHTML}}
             <div class="contact-form col-md-6 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
-                <form id="contact-form" method="post" role="form" netlify>
-
+                <form id="contact-form" method="post" role="form" netlify-honeypot="bot-field" data-netlify="true">
+                    <div class="hidden">
+                        <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
+                    </div>
                     <div class="form-group">
                         <input type="text" placeholder="Your Name" class="form-control" name="name" id="name">
                     </div>
@@ -46,9 +48,8 @@
                     </div>
 
                     <div id="mail-success" class="success">
-                        Thank you. The Mailman is on His Way :)
+                        Thank you. We will get in touch with you soon. :)
                     </div>
-                    <div data-netlify-recaptcha="true"></div>
                     <div id="cf-submit">
                         <input type="submit" id="contact-submit" class="btn btn-transparent" value="Submit">
                     </div>
