--- a/themes/meghna-hugo/layouts/partials/contact.html
+++ b/themes/meghna-hugo/layouts/partials/contact.html
@@ -27,7 +27,7 @@
 
             {{"<!-- Contact Form -->" | safeHTML}}
             <div class="contact-form col-md-6 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
-                <form id="contact-form" method="post" role="form" netlify-honeypot="bot-field" data-netlify="true">
+                <form name="contact" id="contact-form" method="post" role="form" netlify-honeypot="bot-field" data-netlify="true">
                     <div class="hidden">
                         <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
                     </div>
