--- a/themes/meghna-hugo/static/css/style.css
+++ b/themes/meghna-hugo/static/css/style.css
@@ -2182,6 +2182,7 @@ blockquote {
     display: -ms-flexbox;
     display: flex;
     font-weight: 600;
+    flex-direction: column;
 }
 .featured-bottom .btn-default {
     margin-right: 30px;
