--- a/themes/meghna-hugo/layouts/partials/head.html
+++ b/themes/meghna-hugo/layouts/partials/head.html
@@ -2,6 +2,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="description" content="{{if .IsHome}}{{ $.Site.Params.description }}{{else}}{{.Description}}{{end}}">
     <meta name="author" content="{{ $.Site.Params.author }}">
+    <meta name="yandex-verification" content="06a030e1103fc2bf" />
 
     {{ "<!-- Mobile Specific Meta -->" | safeHTML }}
     <meta name="viewport" content="width=device-width, initial-scale=1">
